# jericho

./: CMakeLists.txt  README.md
BasicRP2040/: main.cpp
KalmanTest/: CMakeLists.txt  HW611.cpp  HW611.hpp  MPU6050.cpp  MPU6050.hpp  logger.cpp  logger.hpp  main.cpp
KalmanTest/docs/: register_map.csv
KalmanTest/scripts/: registermap_tocpp.py
include/: BMP280.hpp  HW611.hpp  MPU6050.hpp  i2c_sensor.hpp  logger.hpp  vector.hpp
lib/WS2812/: CMakeLists.txt
lib/WS2812/include/: WS2812.hpp
src/: BMP280.cpp  CMakeLists.txt  HW611.cpp  HW611.hpp  MPU6050.cpp  MPU6050.hpp  WS2812.cpp  logger.cpp  logger.hpp  main.cpp  vector.hpp
tools/I2CScan/: CMakeLists.txt  main.cpp
